--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+html {
+  background-image: url('/public/mybag.png');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  width: 1050px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 550px;
+  border-radius: 20px;
+  text-align: center;
+  background-color: white;
+}
+
+.child1{
+  flex: 1;
+  padding: 20px;
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 20px;
+  background-color: green;
   color: white;
+  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
 }
 
-.App-link {
-  color: #61dafb;
+.child2{
+  background-color: white;
+  margin-right: auto;
+  padding: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3{
+  float: left;
+  font-size: 30px;
+  margin: auto;
+}
+
+.improve{
+  color: green; 
+  margin-left: 10px;
+}
+
+input{
+  border-radius: 5px;
+  max-height: 30px;
+  font-size: 20px;
+  border: 1px solid rgba(0, 0, 0, .5);
+}
+
+button {
+  color: white;
+  background-color: green;
+  border: 0;
+  font-size: 20px;
+  border-radius: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  height: 30px;
+}
+
+.mygrid{
+  display: grid;
+  padding: 20px;
+  grid-gap: 1ch;
 }
