--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 html {
-  background-image: url('/public/mybag.png');
+  background-image: url('/public/ppc-floqast-banner.png');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container{
@@ -12,7 +14,7 @@ html {
   width: 1050px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 550px;
+  margin-top: 500px;
   border-radius: 20px;
   text-align: center;
   background-color: white;
@@ -65,6 +67,7 @@ button {
   margin-top: 5px;
   margin-bottom: 5px;
   height: 30px;
+  cursor: pointer;
 }
 
 .mygrid{
